--- a/public/index.html
+++ b/public/index.html
@@ -1,31 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-	<meta name="description" content="Phantom Wallet CodeSandbox">
-	<meta name="keywords" content="Phantom, Phantom Wallet, Phantom-Wallet, CodeSandbox, Solana, Ethereum, Crypto, Blockchain, Love">
-	<meta name="author" content="Phantom">
-	<meta name="theme-color" content="#000000">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-	<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-	<title>Phantom Wallet – CodeSandbox</title>
-</head>
-<style>
-	* {
-		box-sizing: border-box;
-		margin: 0;
-		color: #fff;
-	}
+  <head>
+    <meta charset="utf-8" />
+    <meta name="description" content="Phantom Ordinals Sandbox" />
+    <meta
+      name="keywords"
+      content="Phantom, Phantom Wallet, Phantom-Wallet, CodeSandbox, Solana, Ethereum, Crypto, Blockchain, Love"
+    />
+    <meta name="author" content="Phantom" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta property="og:title" content="Phantom Ordinals Sandbox" />
+    <link rel="apple-touch-icon" href="/Phantom-Icon_App_128x128.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <title>Phantom Ordinals Sandbox</title>
+  </head>
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      color: #fff;
+    }
 
-	html,body {
-		font-family: sans-serif;
-	}
-</style>
-<body>
-	<noscript>
-		You need to enable JavaScript to run this app.
-	</noscript>
-	<div id="root"></div>
-</body>
+    html,
+    body {
+      font-family: sans-serif;
+    }
+  </style>
+  <body>
+    <noscript> You need to enable JavaScript to run this app. </noscript>
+    <div id="root"></div>
+  </body>
 </html>
